--- a/Samples/PrintSample/cpp/PrintSample.vcxproj
+++ b/Samples/PrintSample/cpp/PrintSample.vcxproj
@@ -242,32 +242,23 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="..\..\..\SharedContent\large\photo1.jpg">
+    <Image Include="..\..\..\SharedContent\large\cliff.jpg">
       <Link>Assets\photo1.jpg</Link>
     </Image>
-    <Image Include="..\..\..\SharedContent\large\photo2.jpg">
+    <Image Include="..\..\..\SharedContent\large\grapes.jpg">
       <Link>Assets\photo2.jpg</Link>
     </Image>
-    <Image Include="..\..\..\SharedContent\large\photo3.jpg">
+    <Image Include="..\..\..\SharedContent\large\rainier.jpg">
       <Link>Assets\photo3.jpg</Link>
     </Image>
-    <Image Include="..\..\..\SharedContent\large\photo4.jpg">
+    <Image Include="..\..\..\SharedContent\large\sunset.jpg">
       <Link>Assets\photo4.jpg</Link>
     </Image>
-    <Image Include="..\..\..\SharedContent\large\photo5.jpg">
+    <Image Include="..\..\..\SharedContent\large\treetops.jpg">
       <Link>Assets\photo5.jpg</Link>
     </Image>
-    <Image Include="..\..\..\SharedContent\large\photo6.jpg">
+    <Image Include="..\..\..\SharedContent\large\valley.jpg">
       <Link>Assets\photo6.jpg</Link>
-    </Image>
-    <Image Include="..\..\..\SharedContent\large\photo7.jpg">
-      <Link>Assets\photo7.jpg</Link>
-    </Image>
-    <Image Include="..\..\..\SharedContent\large\photo8.jpg">
-      <Link>Assets\photo8.jpg</Link>
-    </Image>
-    <Image Include="..\..\..\SharedContent\large\photo9.jpg">
-      <Link>Assets\photo9.jpg</Link>
     </Image>
     <Image Include="Assets\print_1.png">
       <Link>Assets\print_1.png</Link>
